--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
+    "styled-components": "^5.1.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.2",
     "axios": "^0.19.2"
   }
 }
