--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "styled-components": "^5.2.0",
+    "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2"
   },
   "scripts": {
@@ -42,7 +45,9 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.5",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.3"
   }
 }
