--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/recharts": "^1.8.14",
     "axios": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -17,7 +18,7 @@
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    
+    "recharts": "1.8.5",
     "redux": "^4.0.5",
     "styled-components": "^5.2.0",
     "typesafe-actions": "^5.1.0",
@@ -48,7 +49,6 @@
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.5",
-    
     "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.3"
   }
